Fix feature backporting for 1.19.2.